--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
   </head>
   <body>
-      {{ content }}
+      <div dir="rtl">
+          {{content}} 
+      </div>
 
       {% if site.github.private != true and site.github.license %}
       <div class="footer border-top border-gray-light mt-5 pt-3 text-right text-gray">
