--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,3 +6,11 @@
 summary {
   font-size: 24px; // change to whatever
 }
+
+header h1 {
+  font-family: 'Chivo', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-size: 64px; font-weight: 900;
+  line-height: 1.2;
+  color: #303030;
+  letter-spacing: -1px;
+}
