--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,8 +9,12 @@ summary {
 
 header h1 {
   font-family: 'Chivo', 'Helvetica Neue', Helvetica, Arial, serif;
-  font-size: 64px; font-weight: 900;
+  font-size: 72px; font-weight: 900;
   line-height: 1.2;
   color: #303030;
   letter-spacing: -1px;
+}
+
+details {
+  text-indent:40px
 }
