--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,14 +7,10 @@ summary {
   font-size: 24px; // change to whatever
 }
 
-header h1 {
-  font-family: 'Chivo', 'Helvetica Neue', Helvetica, Arial, serif;
-  font-size: 72px; font-weight: 900;
-  line-height: 1.2;
-  color: #303030;
-  letter-spacing: -1px;
+h1 {
+  font-size: 72px;
 }
 
-details {
-  text-indent:40px
+tab {
+  text-indent:40px;
 }
