--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,7 +8,7 @@ summary {
 }
 
 h1 {
-  font-size: 48px;
+  font-size: 42px;
 }
 
 .tab {
@@ -16,5 +16,5 @@ h1 {
 }
 
 a {
-  color: #FF8C00;
+  color: #FFA500;
 }
