--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,11 +4,11 @@
 @import "{{ site.theme }}";
 
 summary {
-  font-size: 24px; // change to whatever
+  font-size: 1.5em; // change to whatever
 }
 
 h1 {
-  font-size: 42px;
+  font-size: 3em;
 }
 
 .tab {
@@ -17,5 +17,5 @@ h1 {
 
 a {
   color: #EE7100;
-  font-size: 1.5em;
+  font-size: 1em;
 }
